# rust-ast-extractor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-04-26-ast-extractor.md  2026-04-27-index-output-and-get-cleanup.md
docs/superpowers/specs/: 2026-04-26-ast-extractor-design.md  2026-04-27-index-output-and-get-cleanup-design.md
src/: main.rs  project.rs
src/cache/: mod.rs  schema.rs
src/commands/: dir.rs  get.rs  index.rs  mod.rs
src/extractor/: mod.rs  visitor.rs
tests/: integration.rs
