[package]
name = "rust-ast-extractor"
version = "0.3.0"
edition = "2024"
description = "CLI tool that parses Rust source files and extracts structured AST data (functions, structs, enums, traits, etc.) into a JSON cache for fast AI-assistant consumption."
license = "MIT"
repository = "https://github.com/Sylviromi/rust-ast-extractor"
keywords = ["ast", "rust", "parser", "cli", "codegen"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["CLAUDE.md"]

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
